# -ipwebcam-wireless-gst

./: CMakeLists.txt  README.md  command.bash  compile.bash  main.c  run.bash
